# Small_Obg_Detection

./: .gitignore  AGENTS.md  README.md  pyproject.toml
notebooks/: colab_train_detector.ipynb  small_object_detector_workbench.ipynb
outputs/reports/: stage_01_dataset_audit.json  stage_01_dataset_audit.md  stage_02_scaffold_review.md  stage_03_annotation_audit_summary.json  stage_03_data_indexing_and_bbox_verification.md  stage_04_eda_review.md  stage_04_eda_summary.json  stage_05_fold_review.md  stage_05_fold_summary.json  stage_06_tiling_review.md  stage_06_tiling_summary.json  stage_07_dataloader_summary.json  stage_07_dataset_review.md  stage_08_model_forward_summary.json  stage_08_model_review.md  stage_09_loss_decode_summary.json  stage_09_loss_inference_review.md  stage_10_smoke_review.md  stage_10_smoke_summary.json  stage_11_colab_notebook_review.md
src/: __init__.py
src/eval/: __init__.py  metrics.py  visualization.py
src/models/: __init__.py  anchors.py  detector.py  inference.py  losses.py
src/train/: __init__.py  engine.py
src/utils/: __init__.py  config.py  reproducibility.py
tests/: test_data_indexing.py  test_dataset_pipeline.py  test_eda.py  test_folds.py  test_loss_and_inference.py  test_metrics.py  test_model_forward.py  test_scaffold_imports.py  test_tiling.py
